# ledpipe

./: CMakeLists.txt  README.md
client/: client.sh  params.txt  pipe.txt
include/: device.h  isimplereflection.h  logic.h  pipe_unix.h  pipe_windows.h
src/: device.cpp  logic.cpp  main.cpp  pipe_unix.cpp  pipe_windows.cpp
